test/bad/arrays/comprehension04.px

[false for x in 2..1 if 0]
